--- a/Desafios/d10/estilo/style.css
+++ b/Desafios/d10/estilo/style.css
@@ -33,15 +33,24 @@ body{
 
 header{
     background-color: var(--cor4);
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
 }
 
 header > h1{
     color: white;
     font-family: var(--font-destaque);
+    font-size: 3em;
+    margin-bottom: 20px;
 }
 
 header > p {
+    font-family: var(--font-padrao);
+    font-size: 1.2em;
     color: white;
+    max-width: 500px;
+    margin: auto;
 }
 
 nav{
